# lychee-ripe

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  go.work  go.work.sum  package.json  pyproject.toml  requirements.txt  turbo.json  uv.lock.cpu  uv.lock.cu128
.github/workflows/: pr-verify-test.yml  pr-verify.yml
app/: main.py  settings.py
app/inference/: aggregator.py  pipeline.py  tracker.py
app/schemas/: api.py
clients/orchard-console/: .gitignore  nuxt.config.ts  package.json  playwright.config.ts  turbo.json  vitest.config.ts
configs/: gateway.yaml.example  model.yaml.example  service.yaml.example
docker/: Dockerfile  Dockerfile.gateway
docs/: prd.md
docs/issues/: README.md
frontend/: .env.example  nuxt.config.ts  package.json  tsconfig.json  vitest.config.ts
frontend/app/: app.config.ts  app.vue
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/tests/: navigation.test.ts  ripeness.test.ts  useBatchCreate.test.ts  useCamera.test.ts  useDashboardOverview.test.ts  useInferenceStream.test.ts  useOverlay.test.ts  usePublicTrace.test.ts
gateway/: go.mod  go.sum
mlops/training/: eval.py  package.json  train.py  turbo.json
scripts/: app.ps1  check.ps1  check.sh  desktop.ps1  desktop.sh  dev.sh  eval.ps1  eval.sh  frontend.ps1  frontend.sh  gateway.ps1  gateway.sh  stack.ps1  stack.sh  switch-lock.ps1  switch-lock.sh  train.ps1  train.sh  verify.ps1  verify.sh
services/gateway/: go.mod  go.sum  package.json  turbo.json
services/inference-api/: README.md  package.json  pyproject.toml  turbo.json  uv.lock.cu128
services/inference-api/app/: main.py  paths.py  settings.py
services/inference-api/app/inference/: factory.py
services/inference-api/app/inference/adapters/: yolo_stable.py
services/inference-api/app/schemas/: common.py
services/inference-api/scripts/: uv-task.mjs
services/inference-api/tests/: __init__.py  conftest.py  factories.py
services/inference-api/tests/integration/: test_api.py
services/inference-api/tests/perf/: test_stream_perf.py
services/inference-api/tests/unit/: test_aggregator.py  test_openapi_contract.py  test_pipeline.py  test_startup_config_guard.py  test_training_path_resolution.py
shared/constants/: ripeness.json
shared/contracts/: package.json
shared/python/: package.json  pyproject.toml  turbo.json
shared/python/lychee_common/: __init__.py  device.py
shared/python/lychee_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shared/python/scripts/: verify.py
shared/schemas/: openapi.yaml
tests/integration/: test_api.py
tests/perf/: test_stream_perf.py
tests/stack/: run-stack.mjs  smoke-stack.mjs
tests/unit/: test_device_resolution.py  test_openapi_contract.py  test_yolo_stable_config.py
tooling/configs/: gateway.compose.yaml  gateway.yaml.example
tooling/docker/: Dockerfile.gateway  Dockerfile.inference-api
tooling/scripts/: cache-env.ps1  cache-env.sh  desktop.ps1  desktop.sh  eval.ps1  eval.sh  gateway.ps1  gateway.sh  inference-api.ps1  inference-api.sh  orchard-console.ps1  orchard-console.sh  stack.ps1  stack.sh  switch-lock.ps1  switch-lock.sh  train.ps1  train.sh  turbo-task.mjs  verify.ps1  (+2 more)
training/: data_spec.md  eval.py  train.py
(+251 files in other folders)
