[package]
name = "lychee-ripe-desktop"
version = "0.1.0"
description = "Desktop shell for lychee-ripe frontend"
authors = ["lychee-ripe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
