[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lychee-ripe"
version = "0.1.0"
description = "Lychee detection and ripeness API service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.3",
  "uvicorn[standard]>=0.42.0",
  "pydantic>=2.12.5",
  "python-multipart>=0.0.22",
  "pyyaml>=6.0.3",
  "numpy>=2.4.4",
  "opencv-python-headless>=4.13.0.92",
  "lychee-common",
  "ultralytics>=8.4.33",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]
cu128 = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=6.2.1",
  "httpx>=0.28.1",
]

[tool.uv]
default-groups = ["dev"]
package = false
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
lychee-common = { path = "../../shared/python", editable = true }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q --cov=app --cov-report=term-missing --cov-report=xml:../../.cache/pytest/inference-api-coverage.xml"
testpaths = ["tests"]
markers = [
  "perf: performance tests"
]

[tool.coverage.run]
source = ["app"]
relative_files = true

[tool.coverage.report]
omit = [
  "tests/*"
]
